--- a/erp_back/src/main/resources/application.properties
+++ b/erp_back/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #localhost:3306/(test改为你的数据库的名称)?
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/client_test?allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.19.241.99:3306/client_test?allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Root123@
 
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
